# fastapi-nextjs-saas-turborepo

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: README.md  ci.yml
.turbo/daemon/: 4906db195f1b9ea1-turbo.log.2025-05-21
apps/api/: Dockerfile  pyproject.toml  requirements.txt
apps/api/src/auth/: __init__.py
apps/api/src/core/: __init__.py
apps/api/src/routes/v1/: jobs.py  users.py
apps/api/src/tasks/: __init__.py
apps/api/src/tests/: conftest.py
apps/api/src/tests/routes/: __init__.py  test_routes.py
apps/api/src/tests/services/: test_services.py
apps/web/: Dockerfile  README.md  es-lint.plugin.d.ts  eslint.config.ts  next.config.ts  package.json  prettier.config.ts  tsconfig.json
apps/web/src/components/home/: ContactForm.tsx  Hero.tsx
apps/web/src/pages/home/: _actions.ts  home.tsx
