[tool.poetry]
name = "api"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pydantic-settings = "^2.9.1"
python-dotenv = "^1.1.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlmodel = "^0.0.24"
fastapi-jwt-auth = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
